# f1tenth_race_stack

./: .gitignore  README.md
maps/: map_1711684998.pgm  map_1711684998.yaml
maps/race2/: race2_map.pgm  race2_map.yaml
maps/race3/: race3_map.pgm  race3_map.yaml
src/controller/: CMakeLists.txt  package.xml
src/controller/include/controller/: geometric_controller.hpp  model_acceleration_pursuit_controller.hpp  pure_pursuit_controller.hpp
src/controller/launch/: controller_launch.py  geometric_controller_launch.py  opp_launch.py
src/controller/scripts/: model_predictive_controller.py  mpc_test.py
src/controller/src/: geometric_controller_node.cpp
src/controller/src/controllers/: geometric_controller.cpp  model_acceleration_pursuit_controller.cpp  pure_pursuit_controller.cpp
src/planner/: package.xml  setup.cfg  setup.py
src/planner/scripts/: centerline_generator.py  funny_splines.py  global_planner_node.py  local_lane_changer.py  test.py  trajectory_builder.py
src/planner/trajectories/: optimized_trajectory.npz  optimized_trajectory_1.npz  optimized_trajectory_10.npz  optimized_trajectory_11.npz  optimized_trajectory_12.npz  optimized_trajectory_13.npz  optimized_trajectory_14.npz  optimized_trajectory_15.npz  optimized_trajectory_16.npz  optimized_trajectory_17.npz  optimized_trajectory_19.npz  optimized_trajectory_2.npz  optimized_trajectory_21.npz  optimized_trajectory_22.npz  optimized_trajectory_23.npz  optimized_trajectory_3.npz  optimized_trajectory_4.npz  optimized_trajectory_5.npz  (+12 more)
src/stack_master/: package.xml  setup.cfg  setup.py
(+19 files in other folders)
